--- a/NeighboursApp/Views/Home/Index.cshtml
+++ b/NeighboursApp/Views/Home/Index.cshtml
@@ -87,10 +87,10 @@
             <input type='text' id='name' name='name' placeholder='Name' required/><br><br>
             <label>Email</label>
             <input type='email' id='email' name='email' placeholder='Email' required/><br><br>
-            <label>Phone Number</label>
+            @* <label>Phone Number</label>
             <input type='tel' id='phonenumber' name='phonenumber' placeholder='Phone Number' required/><br><br>
             <label>Address</label>
-            <input type='text' id='address' name='address' placeholder='Address' required/><br><br>
+            <input type='text' id='address' name='address' placeholder='Address' required/><br><br> *@
             <label>Password</label>
             <input type='password' id='password' name='password' placeholder='Password' required/><br><br>
             <label>Confirm Password</label>
