--- a/NeighboursApp/Views/Listings/Search.cshtml
+++ b/NeighboursApp/Views/Listings/Search.cshtml
@@ -30,7 +30,7 @@
       position: relative;
     }
 
-    .people_planting {
+    .women_exchanging_basket {
       left: 528px;
       position: absolute;
       top: 45px;
@@ -90,17 +90,14 @@
       <h5 class="search_title">Search</h5>
       <form class="search_form" action="/results" method="get">
         <div class="form_input_fields">
-          <label>Location</label>
-          <input type='text' size="22" id='location' name='location' placeholder='Where are you located?'/><br><br>
           <label>Requirements</label>
           <input type='text' size="22" id='requirements' name='requirements' placeholder='What are you looking for?'/><br><br>
+          <label>Location</label>
+          <input type='text' size="22" id='location' name='location' placeholder='Where are you located?'/><br><br>
         </div>
         <input type='submit' id='submit' value='Submit'/>
       </form>
-      <br>
-      <h6 id="message" style="color:red">@ViewBag.Error</h6>
-      <br>
-      <img class="people_planting" src="https://chopra.brightspotcdn.com/dims4/default/5ce9dc9/2147483647/strip/true/crop/693x390+61+0/resize/1200x675!/quality/90/?url=http%3A%2F%2Fchopra-brightspot.s3.amazonaws.com%2F24%2Fa8%2Ffaa072655ded01ab5619b910f567%2Fvolunteers.jpg" alt="people_planting"/>
+      <img class="women_exchanging_basket" src="https://www.brightonescrow.com/wp-content/uploads/2020/08/shutterstock_1216266838-thegem-blog-default.jpg" alt="women-exchanging-basket"/>
     </div>
 
     <p class="create_listing_message"><em>Can you help a neighbour? <a  href="/create-listing" id="create_listing" >Add a listing</a></em></p>
