--- a/NeighboursApp/Views/Listings/CreateListing.cshtml
+++ b/NeighboursApp/Views/Listings/CreateListing.cshtml
@@ -27,11 +27,11 @@
       margin: 50px auto 10px;
     }
 
-    .people_planting {
+    .woman_giving_man_cup_of_tea {
       left: 600px;
       position: absolute;
       top: 240.5px;
-      width: 700px;
+      width: 600px;
     }
 
     .create_listing_container{
@@ -88,13 +88,11 @@
           <input type='description' size="25" id='description' name='description' placeholder='Give a brief description...' required/><br><br>
           <label>Location</label>
           <input type='text' size="25" id='location' name='location' placeholder='Where are you based?' required/><br><br>
-          <label>Price</label>
-          <input type='text' id='price' size="25" name='price' placeholder='How much are you charging?' required/><br><br>
           <input type='submit' id='submit' value='Create Listing'/>
         </div>
       </form>
     </div>
-    <img class="people_planting" src="https://chopra.brightspotcdn.com/dims4/default/5ce9dc9/2147483647/strip/true/crop/693x390+61+0/resize/1200x675!/quality/90/?url=http%3A%2F%2Fchopra-brightspot.s3.amazonaws.com%2F24%2Fa8%2Ffaa072655ded01ab5619b910f567%2Fvolunteers.jpg" alt="people_planting"/>
+    <img class="woman_giving_man_cup_of_tea" src="https://www.vandeventers.law/Portals/25/boundary-walls-what-happens-when-your-neighbour-builds-over-the-boundary-line_main.jpg" alt="woman_giving_man_cup_of_tea"/>
   </div>
 </body>
 
