--- a/NeighboursApp/Views/Shared/_Layout.cshtml
+++ b/NeighboursApp/Views/Shared/_Layout.cshtml
@@ -86,7 +86,10 @@
                          <li class="nav-item">
                             <a class="nav-link text-dark" href="/create-listing" id="create_listing" >Create Listing</a>
                         </li>
-                    </ul>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/listings-all" id="listings_all" >All Listings</a>
+                        </li>
+           </ul>
                 </div>
                 @if(ViewBag.Name != null)
                 {
