--- a/NeighboursApp/Views/Shared/_Layout.cshtml
+++ b/NeighboursApp/Views/Shared/_Layout.cshtml
@@ -97,6 +97,10 @@
                     <a href="/my-profile" id="my_profile">My Profile</a>
                     <a href="/signout" id="signout">Sign Out</a>
                 }
+                else if(ViewBag.DisplaySignIn == false)
+                {
+            
+                }
                 else
                 {
                     <a href="/signin" id="signin">Sign In</a>
