--- a/NeighboursApp/Views/Listings/AllListings.cshtml
+++ b/NeighboursApp/Views/Listings/AllListings.cshtml
@@ -77,7 +77,7 @@ else if(ViewBag.Requirements == "")
 } *@
 
 <div>
-  <h5 class="results_title">All Results</h5>
+  <h5 class="results_title">All Listings</h5>
 
   @foreach (Listing listing in ViewBag.Listings)
   {
