--- a/NeighboursApp/Views/Listings/Search.cshtml
+++ b/NeighboursApp/Views/Listings/Search.cshtml
@@ -73,7 +73,22 @@
       cursor: pointer;
     }
 
+    #add_listing {
+      background-color: white;
+      border: 1px solid;
+      border-radius: 8px;
+      color: forestgreen;
+      font-size: large;
+      padding: 5px 20px;
+      text-decoration: none;
+      transition: all 200ms ease-in-out;       
+    }
 
+    #add_listing:hover {
+      background-color: #7cba00;
+      color: white;
+      cursor: pointer;
+    }
       
 
   </style>
@@ -100,7 +115,7 @@
       <img class="women_exchanging_basket" src="https://www.brightonescrow.com/wp-content/uploads/2020/08/shutterstock_1216266838-thegem-blog-default.jpg" alt="women-exchanging-basket"/>
     </div>
 
-    <p class="create_listing_message"><em>Can you help a neighbour? <a  href="/create-listing" id="create_listing" >Add a listing</a></em></p>
+    <p class="create_listing_message"><em>Can you help a neighbour? </em> <a  href="/create-listing" id="add_listing" >Add a listing</a>
   </div>
 </body>
 
